fixed unaligned author name

--- a/public/siege/css/mobile.css
+++ b/public/siege/css/mobile.css
@@ -162,9 +162,7 @@ span {
 }
 
 #author > p {
-    height: 45px;
     display: inline-block;
-    vertical-align: middle;
     margin-right: 50px;
 }
 
